--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <header class="header">
-    <div class="container">
+    <div class="header__container container">
       <img src="/img/logo.svg" alt="Логотип компании ApplePro" class="header__logo" />
 
       <nav class="header__navivation navigation">
@@ -32,26 +32,26 @@
             <a href="#features" class="navigation__link">Характеристики</a>
           </li>
         </ul>
-
-        <div class="header__country country">
-          <button class="country__btn">Страна</button>
-
-          <ul class="country__list">
-            <li class="country__item">
-              <button class="country__btn">Russia, RUB</button>
-            </li>
-            <li class="country__item">
-              <button class="country__btn">USA, USD</button>
-            </li>
-            <li class="country__item">
-              <button class="country__btn">Germany, EURO</button>
-            </li>
-            <li class="country__item">
-              <button class="country__btn">Great Britain, GBP</button>
-            </li>
-          </ul>
-        </div>
       </nav>
+
+      <div class="header__country country">
+        <button class="country__btn">Страна</button>
+
+        <ul class="country__list">
+          <li class="country__item">
+            <button class="country__btn">Russia, RUB</button>
+          </li>
+          <li class="country__item">
+            <button class="country__btn">USA, USD</button>
+          </li>
+          <li class="country__item">
+            <button class="country__btn">Germany, EURO</button>
+          </li>
+          <li class="country__item">
+            <button class="country__btn">Great Britain, GBP</button>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
   <main>
